k8s-demo/zipkin/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: zipkin
  labels:
    name: zipkin
    app: zipkin
