k8s-demo/zipkin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: zipkin
  name: zipkin
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          ports:
            - name: http
              containerPort: 9411
